--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 }
 
 body {
+    color: whitesmoke !important;
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-    background-image: -moz-radial-gradient();
+    background-image:url(./assets/background1.png)
 }
