--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,5 @@
 body {
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-    background-image: -moz-radial-gradient();
+    background-image: url(../src/assets/background1.png);
 }
